sass/layout/_homepage.scss
// Homepage
// ------------------------------------------------------------------------------------------------------

// Meta area for Home featured text
.icon-broadcast-home,
.icon-broadcast {
  background-image: url("img/icon-broadcast.svg");
  background-position: 0 62%;
  background-repeat: no-repeat;
  background-size: 1.2rem;
  margin-left: 0.2rem;
  padding-left: 1.5rem;

  @media screen and (max-width: 800px) {
    padding-left: 0;
    background: none;
  }
}

.icon-broadcast-bio {
  // transform: translateX(0.75rem);
  // display: inline-block;
}

.icon-poetry-home,
.icon-poetry {
  background-image: url("img/icon-poetry.svg");
  background-position: 0 65%;
  background-repeat: no-repeat;
  background-size: 1.7rem;
  margin-left: 0;
  padding-left: 2.1rem;

  @media screen and (max-width: 800px) {
    padding-left: 0;
    background: none;
  }
}

.icon-postcard-home,
.icon-postcard_prose {
  background-image: url("img/icon-postcard.svg");
  background-position: 0 62%;
  background-repeat: no-repeat;
  background-size: 1.5rem;
  padding-left: 1.9rem;

  @media screen and (max-width: 800px) {
    padding-left: 0;
    background: none;
  }
}

.icon-travel-home,
.icon-travel_notes {
  background-image: url("img/icon-travel.svg");
  background-position: 0 56%;
  background-repeat: no-repeat;
  background-size: 1.3rem;
  margin-left: 0.1rem;
  padding-left: 1.8rem;

  @media screen and (max-width: 800px) {
    padding-left: 0;
    background: none;
  }
}

// Bio icon
.icon-bio {
  background-image: url("img/icon-bio.svg");
  background-position: 0 100%;
  background-repeat: no-repeat;
  background-size: 1.2rem;
  margin-left: 0;
  padding-left: 1.5rem;
}

// Latest work layout
.latest {
  display: flex;
  flex-direction: row;
  justify-content: space-between;

  @media screen and (max-width: 899px) {
    flex-direction: column;
    justify-content: flex-start;
  }

  &__1 {
    flex-basis: 50%;
    margin-left: calc(1rem + #{$scale-value});
    margin-right: calc(3rem + #{$scale-value});

    @media screen and (max-width: 899px) {
      margin-right: calc(1rem + #{$scale-value});
    }
  }

  &__2 {
    flex-basis: 50%;
    margin-left: calc(3rem + #{$scale-value});
    margin-right: calc(1rem + #{$scale-value});
    background-image: url("img/plane2.jpg");
    background-position: center top;
    background-repeat: no-repeat;
    background-size: 90%;
    background-blend-mode: darken;
    background-color: $color__background-body;
    margin-top: 3rem;
    padding-top: 10rem;

    @media screen and (max-width: 899px) {
      margin-right: calc(1rem + #{$scale-value});
      margin-left: calc(1rem + #{$scale-value});
      // margin-top: 0;
    }
  }

  &__image {
    margin-bottom: 2rem;
    padding-right: 5%;
    padding-left: 15%;
  }
}

.latest-list.highlight-box {
  background-color: #fbf9f7;
  margin-top: -1rem;
  box-shadow: 0 0 10rem 0 rgba(0, 0, 0, 0.065);
  border-radius: 0 0 0.3rem 0.3rem;
}

.latest-list {
  &__item {
    font-size: 90%;
    // border-bottom: 0.1rem solid rgba($border-grey, 0.15);
    padding: 0;
    margin-bottom: 1.25rem;
    // &::after {
    // content: "";
    // font-size: 50%;
    // display: block;
    // margin: 0.5rem 0 0.5rem 0;
    // width: 13%;
    // padding: 0.5rem 0 0 0;
    // // border-bottom: 0.1rem solid $border-grey;
    // }

    &:last-child {
      // margin-bottom: 0;
      &::after {
        border: 0;
      }
    }
  }

  &__cat {
    @include sans;
    font-size: 50%;
    text-transform: uppercase;
    color: rgba(black, 0.8);
    background-position: left bottom;
    background-repeat: no-repeat;
    margin-left: 0rem;
    padding: 2rem 0 0 1.8rem;
    filter: opacity(70%);

    &--poetry {
      background-image: url("img/icon-poetry.svg");
      background-size: 1.5rem;
    }

    &--postcard {
      background-image: url("img/icon-postcard.svg");
      background-size: 1.4rem;
    }

    &--travel {
      background-image: url("img/icon-travel.svg");
      background-size: 1.2rem;
      background-position: 0.1rem bottom;
    }

    &--review {
      background-image: url("img/icon-review.svg");
      background-size: 1.2rem;
      background-position: 0.1rem bottom;
    }

    &--logbook {
      background-image: url("img/icon-logbook.svg");
      background-size: 0.9rem;
      background-position: 0.2rem bottom;
    }
  }

  &__link {
    margin-left: 0.1rem;
  }

  &__author {
    color: $warm-brown-3;
    // color: rgba(0, 0, 0, 0.5);
    opacity: 80%;
  }
}

// Home feature
// --------------------

.home-feature {
  &__title {
    margin: 0 0 0.5rem 0;
    padding: 0;
    font-size: 175%;
  }

  &__byline {
    margin: 0 0 0.5rem 0;
    padding: 0;
    font-size: 85%;
  }

  &__meta {
  }

  &__excerpt {
    margin-top: 1rem;
    font-size: 80%;
  }

  &__more {
    margin: 1.5rem 0 2rem 0;
    display: inline-block;
    // padding-bottom: 1.1rem !important;
  }

  // Meta
  // ----------------------------------------------------------------------------
  $meta-dim: 0.75rem;

  .meta {
    border-top: 1px solid $border-grey;
    margin: 0;
    padding: 0;
    list-style-type: none;
    @include sans;
    font-size: 50%;
    display: flex;
    flex-direction: row;
    align-items: flex-start;

    @media (max-width: #{$responsive-switch}) {
      background-color: transparent;
      margin-bottom: 2rem;
    }

    @media (max-width: 900px) {
      width: auto;
    }

    &__item {
      text-transform: uppercase;
      padding-top: 0.2rem;

      @media (max-width: #{$responsive-switch}) {
        padding-left: auto;
      }

      &--border {
        padding-right: $meta-dim;
        margin-right: calc(#{$meta-dim} - 1px);
        border-right: 1px solid $border-grey;
      }
    }
  }
}

